register improving
